--- a/styles.css
+++ b/styles.css
@@ -28,25 +28,25 @@ h1, h2, h3, h4, h5 {
     text-align: center;
     background-color: var(--background);
     color: var(--foreground);
+    padding: 0 2rem;
 }
 
 .day-date {
     width: 100%;
-    display: flex;
-    justify-content: flex-end;
     font-size: 2rem;
     font-weight: bold;
-    
 }
 
 .day-languages {
+    width: 100%;
     display: flex;
     list-style: none;
     justify-content: center;
+    overflow: wrap;
 }
 
 .day-languages li {
-    margin: 1rem;
+    margin: .2rem;
     padding: .5rem;
     background-color: var(--selected-green);
     border-radius: 3px;
@@ -81,5 +81,13 @@ pre.leetcode-code {
     font-size: 1rem;
     overflow-x: scroll;
     width: fit-content;
+    max-width: 100%;
 }
 
+
+
+@media screen and (max-width:600px) {
+    .section-body {
+        padding: 2rem 0;
+    }
+}
