--- a/styles.css
+++ b/styles.css
@@ -14,12 +14,12 @@ body {
 }
 
 
-
 header {
     background-color: var(--background);
     color: var(--foreground);
-    padding: 2rem;
+    padding: 2rem 0;
     width:100%;
+    text-align: center;
 }
 
 h1, h2, h3, h4, h5 {
@@ -27,11 +27,12 @@ h1, h2, h3, h4, h5 {
 }
 
 .day-description {
-    width: 100%;
+    max-width: 100%;
     text-align: center;
     background-color: var(--background);
     color: var(--foreground);
-    padding: 0 2rem;
+    padding: 2rem;
+    /* display: none; */
 
 }
 
@@ -42,12 +43,13 @@ h1, h2, h3, h4, h5 {
 }
 
 .day-languages {
-    width: 100%;
+    
     /* display: flex; */
-    list-style: none;
-    justify-content: center;
+    
     /* overflow: hidden; */
 }
+
+
 
 .day-languages li {
     margin: .2rem;
@@ -56,6 +58,7 @@ h1, h2, h3, h4, h5 {
     border-radius: 3px;
     cursor: pointer;
     display: inline-block;
+    list-style: none;
 }
 
 .header-title {
@@ -69,7 +72,7 @@ h1, h2, h3, h4, h5 {
     background-color: var(--background);
     color: var(--foreground);
     
-    padding: 2rem;
+    padding: 2rem 0;
     text-align: center;
 }
 
