--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,14 @@ h1, h2, h3, h4, h5 {
     font-family: 'Courier New', Courier, monospace;
 }
 
+button {
+    padding: .2rem 1rem;
+    border: none;
+    outline: none;
+    border-radius: 3px;
+    margin: .2rem;
+}
+
 .day-description {
     max-width: 100%;
     text-align: center;
