--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ table {
     border-collapse: collapse;
 }
 
-header {
+header, footer {
     background-color: var(--background);
     color: var(--foreground);
     padding: 2rem 0;
